Uploaded img for readme and fixed contrast error

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-family: 'Roboto', 'Lato', sans-serif;
+  background-color: rgba(165, 229, 238, 0.432);
 }
 
 #logo {
