--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: 'Roboto', 'Lato', sans-serif;
-    background-color: white;
+    background-color: rgba(165, 229, 238, 0.432);;
 }
 
 #logo {
