--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Roboto', 'Lato', sans-serif;
-    background-color: white;
+    background-color: rgba(165, 229, 238, 0.432);
     text-align: center;
 }
 
@@ -25,6 +25,7 @@ body {
     border: none;
     float: right;
     list-style-type: none;
+    
 }
 
 
@@ -61,8 +62,8 @@ h2 {
     margin: 0;
     background-color: rgb(64, 119, 201);
     opacity: .7;
-    bottom: 300px;
-    right: 150px;
+    bottom: 100px;
+    right: 100px;
     position: absolute;
 }
 
@@ -153,8 +154,8 @@ footer {
     margin: 0;
 }
 
-/* For medium screen sizes from 950px wide and down */
-@media screen and(max-width: 950px) {
+/* For mobile */
+@media screen and(min-width: 370px) {
 
     #menu {
         clear: left;
@@ -164,8 +165,15 @@ footer {
         line-height: 25px;
     }
 
+    #hero-image {
+        width: 50%;
+        height: 50%;
+    }
     #cover-text {
         left: 0;
+        float: right;
+        width: 60%;
+        height: 36%;
     }
 
     #club-ethos {
@@ -189,5 +197,12 @@ footer {
     .right-about-heading p {
         text-align: center;
         padding: 0 20px;
+    }
+
+    #times > div {
+        width: 100%;
+        height: 100px;
+        clear: both;
+        padding: 0;
     }
 }
