--- a/assets/css/thank you.css
+++ b/assets/css/thank you.css
@@ -5,4 +5,5 @@ body {
     text-align: center;
     font-size: xx-large;
     font-family: 'Roboto', 'Lato', sans-serif;
+    background-color: rgba(165, 229, 238, 0.432);
 }
